Fix font display and a redraw bug on Firefox. Add summonLoader to homepage links.

--- a/www/less/home.less
+++ b/www/less/home.less
@@ -33,8 +33,8 @@
 //|Allura
 html{
     margin:0;padding:0;
-    //-webkit-font-smoothing: subpixel-antialiased;
-    //-moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: subpixel-antialiased;
+    -moz-osx-font-smoothing: grayscale;
 
 }
 body{
@@ -334,7 +334,7 @@ nav{
     .transform(translateX( -50% ) translateY( -50% ) translateZ(@zDepth0));
     text-align:center;
     opacity: 1;
-    background-color:transparent;
+    background-color:#fff;
     h1{margin:80px 0 0;}
     ul{
         width:100%;
